Add recipe for Scheduler component.

--- a/cookbooks/dmon/templates/default/scheduler.conf.properties.erb
+++ b/cookbooks/dmon/templates/default/scheduler.conf.properties.erb
@@ -1,7 +1,8 @@
 #RabbitMQ connection details
 rabbitHost = 127.0.0.1
-rabbitSendQueue = rawResults
-rabbitReceiveQueue = scheduled
+rabbitSendQueue = scheduled
+rabbitReceiveQueue = commands
+rabbitDelayQueue = commands
 rabbitUser = bogdan
 rabbitPassword = constantin
 
