Add working directory in systemd config template.

--- a/cookbooks/dmon/templates/default/start_component.service.erb
+++ b/cookbooks/dmon/templates/default/start_component.service.erb
@@ -3,6 +3,7 @@ Description=<%=@componentName%> service
 [Service]
 ExecStart=<%=@home%>/bin/start.sh
 ExecStop=<%=@home%>/bin/stop.sh
+WorkingDirectory=<%=@home%>/bin
 User=root
 Type=forking
 [Install]
