Add send queue in config template for presenter component.

--- a/cookbooks/dmon/templates/default/presenter.conf.properties.erb
+++ b/cookbooks/dmon/templates/default/presenter.conf.properties.erb
@@ -1,5 +1,6 @@
 #RabbitMQ connection details
 rabbitHost = 127.0.0.1
+rabbitSendQueue = monitoring
 rabbitReceiveQueue = processedResults
 rabbitUser = bogdan
 rabbitPassword = constantin
